syntax = "proto3";
package pt.ulisboa.tecnico.nameserver.contract;


message RegisterRequest {
  string serviceName = 1;
  string serverQualifier = 2;
  string serverTarget = 3;
}

message RegisterResponse {
}

message LookupRequest {
  string serviceName = 1;
  string serverQualifier = 2;
}

message LookupResponse {
  repeated string servers = 1;
}

message DeleteRequest {
  string serviceName = 1;
  string serverTarget = 2;
}

message DeleteResponse {
  string success = 1;
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}

